# FileSync

./: CMakeLists.txt  FileSync.cpp  FileSync.hpp  RegularExpressionHelpers.cpp  RegularExpressionHelpers.hpp  main.cpp
tests/: CMakeLists.txt  testFileSync.cpp  testRegex.cpp
